--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -17,8 +17,8 @@
         <div>
             <div>
                 <div>
-                    <h1>Ristorante con Fusion</h1>
-                    <p>We take inspiration from the World's best cuisines, and create a unique fusion experience. Our lipsmacking creations will tickle your culinary senses!</p>
+                    <h1>Input your GIF or description</h1>
+                    <p>Search</p>
                 </div>
                 <div>
                 </div>
