added a few bootstrap classes

--- a/bootstrap/about.html
+++ b/bootstrap/about.html
@@ -16,14 +16,14 @@
 <body>
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
-            <a class="navbar-brand href="#">AniGIF</a>
+            <a class="navbar-brand" href="./index.html">AniGIF</a>
                 <ul class="navbar-nav mr-auto">
-                    <li class="navbar-item active"><a class="nav-link" href="#">Search</a></li>
-                    <li class="navbar-item"><a class="nav-link" href="./about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./index.html">Search</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#">About</a></li>
                 </ul>
         </div>
     </nav>
-
+    
     <header>
         <div class="jumbotron">
             <div class="container">
@@ -41,7 +41,7 @@
 
     <div class="container">
         <div class="row row-content">
-            <div class="col-12 col-sm-8">
+            <div class="col-12 col-sm-4 col-md-3">
                 <h2>Searching by animated GIF</h2>
                 <p>Input an animated GIF file, the system will return similar GIFs</p>
             </div>
@@ -50,7 +50,7 @@
         </div>
 
         <div class="row row-content">
-            <div class="col-12 col-sm-8">
+            <div class="col-12 col-sm-4 col-md-3">
                 <h2>Searching by text</h2>
                 <p>Input text description/key words, the system will return GIFs that map the text</p>
             </div>
@@ -58,7 +58,7 @@
             </div>
         </div>
     </div>
-
+    
     <footer>
         <div>
            <div>             
