added a searching form

--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -10,6 +10,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="node_modules/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" href="node_modules/bootstrap-social/bootstrap-social.css">
     <title>GIF Retrieval System</title>
 </head>
 
@@ -18,8 +20,8 @@
         <div class="container">
             <a class="navbar-brand href="#">AniGIF</a>
                 <ul class="navbar-nav mr-auto">
-                    <li class="navbar-item active"><a class="nav-link" href="#">Search</a></li>
-                    <li class="navbar-item"><a class="nav-link" href="./about.html">About</a></li>
+                    <li class="navbar-item active"><a class="nav-link" href="#"><span class="fa fa-search fa-lg"></span>Search</a></li>
+                    <li class="navbar-item"><a class="nav-link" href="./about.html"><span class="fa fa-info fa-lg"></span>About</a></li>
                 </ul>
         </div>
     </nav>
@@ -32,40 +34,54 @@
                         <h1>AniGIF</h1>
                         <p>An animated GIF search and retrieval system</p>
                     </div>
-                    <div class="col-12 col-sm">
-                    </div>
                 </div>
             </div>
         </div>
     </header>
 
     <div class="container">
-        <div class="row row-content">
-            <div class="col-12 col-sm-8">
-                <h2>Searching by animated GIF</h2>
-                <p>Input an animated GIF file, the system will return similar GIFs</p>
+        <div class="row row-content align-items-center">
+            <div class="col-12 col-md-10">
+                <h2>Explore GIFs ...</h2>
+                <form>
+                    <div class="form-group row">
+                        <div class="col-md-10">
+                            <input type="text" class="form-control" id="search" name="search"
+                            placeholder="Search">
+                        </div>
+                    </div>
+                </form>
             </div>
-            <div class="col col-sm col-md">
-            </div>
-        </div>
-
-        <div class="row row-content">
-            <div class="col-12 col-sm-8">
-                <h2>Searching by text</h2>
-                <p>Input text description/key words, the system will return GIFs that map the text</p>
-            </div>
-            <div class="col col-sm col-md">
+            <div class="col-12 col-md">
             </div>
         </div>
     </div>
 
-    <footer>
-        <div>
-           <div>             
-                <div>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-7 col-sm-5">
+                    <h5>Group Member</h5>
+                    <p>
+                      Li, Kailun<br>
+                      Peng, Anjian<br>
+                      Wang, Fang<br>
+                   </p>
+                </div>
+                <div class="col-5 col-sm-4">
+                    <div>
+                        <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i class="fa fa-google-plus"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i>i></a>
+                        <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-left">             
+                <div class="col-auto">
                     <p>© Copyright 2018 CS6400 Group10</p>
                 </div>
-           </div>
+            </div>
         </div>
     </footer>
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
