--- a/bootstrap/about.html
+++ b/bootstrap/about.html
@@ -18,8 +18,8 @@
         <div class="container">
             <a class="navbar-brand" href="./index.html">AniGIF</a>
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item"><a class="nav-link" href="./index.html">Search</a></li>
-                    <li class="nav-item active"><a class="nav-link" href="#">About</a></li>
+                    <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-search fa-lg"></span>Search</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-info fa-lg"></span>About</a></li>
                 </ul>
         </div>
     </nav>
@@ -40,17 +40,17 @@
     </header>
 
     <div class="container">
-        <div class="row row-content">
-            <div class="col-12 col-sm-4 col-md-3">
+    	
+        <div class="row row-content align-items-center">
+            <div class="col-12 col-sm-8">
+            	<h3>About the System</h3>
                 <h2>Searching by animated GIF</h2>
                 <p>Input an animated GIF file, the system will return similar GIFs</p>
             </div>
-            <div class="col col-sm col-md">
-            </div>
         </div>
 
-        <div class="row row-content">
-            <div class="col-12 col-sm-4 col-md-3">
+        <div class="row row-content align-items-center">
+            <div class="col-12 col-sm-8">
                 <h2>Searching by text</h2>
                 <p>Input text description/key words, the system will return GIFs that map the text</p>
             </div>
@@ -60,12 +60,30 @@
     </div>
     
     <footer>
-        <div>
-           <div>             
-                <div>
+        <div class="container">
+            <div class="row">
+                <div class="col-7 col-sm-5">
+                    <h5>Group Member</h5>
+                    <p>
+                      Li, Kailun<br>
+                      Peng, Anjian<br>
+                      Wang, Fang<br>
+                   </p>
+                </div>
+                <div class="col-5 col-sm-4">
+                    <div>
+                        <a class="btn btn-social-icon btn-google" href="http://google.com/+"><i class="fa fa-google-plus"></i></a>
+                        <a class="btn btn-social-icon btn-facebook" href="http://www.facebook.com/profile.php?id="><i class="fa fa-facebook"></i></a>
+                        <a class="btn btn-social-icon btn-twitter" href="http://twitter.com/"><i class="fa fa-twitter"></i>i></a>
+                        <a class="btn btn-social-icon btn-youtube" href="http://youtube.com/"><i class="fa fa-youtube"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row justify-content-left">             
+                <div class="col-auto">
                     <p>© Copyright 2018 CS6400 Group10</p>
                 </div>
-           </div>
+            </div>
         </div>
     </footer>
     <!-- jQuery first, then Popper.js, then Bootstrap JS. -->
