--- a/bootstrap/about.html
+++ b/bootstrap/about.html
@@ -59,7 +59,7 @@
         </div>
     </div>
     
-    <footer>
+    <footer class="footer">
         <div class="container">
             <div class="row">
                 <div class="col-7 col-sm-5">
