--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
-            <a class="navbar-brand href="#">AniGIF</a>
+            <a class="navbar-brand" href="#"><img src="img/AniGIF_brand.png" alt="AniGIF logo" height="30" width="85%"></a>
                 <ul class="navbar-nav mr-auto">
                     <li class="navbar-item active"><a class="nav-link" href="#"><span class="fa fa-search fa-lg"></span>Search</a></li>
                     <li class="navbar-item"><a class="nav-link" href="./about.html"><span class="fa fa-info fa-lg"></span>About</a></li>
