--- a/bootstrap/about.html
+++ b/bootstrap/about.html
@@ -16,10 +16,10 @@
 <body>
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="./index.html">AniGIF</a>
+            <a class="navbar-brand" href="./index.html"><img src="img/AniGIF_brand.png" class="img-rounded" alt="AniGIF logo" height="30" width="85%"></a>
                 <ul class="navbar-nav mr-auto">
-                    <li class="nav-item"><a class="nav-link" href="./index.html"><span class="fa fa-search fa-lg"></span>Search</a></li>
-                    <li class="nav-item active"><a class="nav-link" href="#"><span class="fa fa-info fa-lg"></span>About</a></li>
+                    <li class="navbar-item"><a class="nav-link" href="./index.html"><span class="fa fa-search fa-lg"></span>Search</a></li>
+                    <li class="navbar-item active"><a class="nav-link" href="#"><span class="fa fa-info fa-lg"></span>About</a></li>
                 </ul>
         </div>
     </nav>
