--- a/bootstrap/index.html
+++ b/bootstrap/index.html
@@ -18,7 +18,7 @@
 <body>
     <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="#"><img src="img/AniGIF_brand.png" alt="AniGIF logo" height="30" width="85%"></a>
+            <a class="navbar-brand" href="#"><img src="img/AniGIF_brand.png" class="img-rounded" alt="AniGIF logo" height="30" width="85%"></a>
                 <ul class="navbar-nav mr-auto">
                     <li class="navbar-item active"><a class="nav-link" href="#"><span class="fa fa-search fa-lg"></span>Search</a></li>
                     <li class="navbar-item"><a class="nav-link" href="./about.html"><span class="fa fa-info fa-lg"></span>About</a></li>
@@ -41,7 +41,7 @@
 
     <div class="container">
         <div class="row row-content align-items-center">
-            <div class="col-12 col-md-8">
+            <div class="col-10 col-md-8">
                 <h2>Explore GIFs ...</h2>
                 <form>
                     <div class="form-group row">
@@ -52,11 +52,11 @@
                     </div>
                 </form>
             </div>
-            <div class="col-12 col-md">
+            <div class="col-1 col-md-1">
                 <p></p>
-                <button class="btn" onclick="showResult()"><i class="fa fa-search fa-lg"></i></button>
+                <button id="searchBtn" class="btn" onclick="showResult()"><i class="fa fa-search fa-lg"></i></button>
             </div>
-            <div class="col-12 col-md">
+            <div class="col-1 col-md-1">
                 <p></p>
                 <button class="btn" onclick="clearResult()"><i class="fa fa-times fa-lg"></i></button></button>
             </div>
@@ -64,13 +64,34 @@
         </div>
     </div>
 
+    
     <div class="container">
-        <ul class="list-group">
-            <li class="list-group-item"><img src="/img/carComing.gif"></li>
-            <li class="list-group-item"><img src="/img/carDrifting.gif"></li>
-            <li class="list-group-item"><img src="/img/carSpining.gif"></li>
-            <li class="list-group-item"><img src="/img/carDrifting2.gif"></li>
-        </ul>
+        <div class="row row-content align-items-center">
+            <div class="col-6 col-md-4 ml-auto">
+                <img src="/img/carComing.gif" alt="car coming" height="70%" width="70%" class="img-thumbnail">
+            </div>
+            <div class="col-6 col-md-4 mr-auto">
+                <img src="/img/carDrifting.gif" alt="car drifting" height="70%" width="70%" class="img-thumbnail">
+            </div>
+            <div class="col-6 col-md-4 mr-auto">
+                <img src="/img/carSpining.gif" alt="car spining" height="70%" width="70%" class="img-thumbnail">
+            </div>
+        </div>
+        <div class="row row-content align-items-center">
+            <div class="col-6 col-md-4 ml-auto">
+                <img src="/img/carComing2.gif" alt="car coming" height="70%" width="70%" class="img-thumbnail">
+            </div>
+            <div class="col-6 col-md-4 mr-auto">
+                <img src="/img/carSwinging.gif" alt="car drifting" height="70%" width="70%" class="img-thumbnail">
+            </div>
+            <div class="col-6 col-md-4 mr-auto">
+                <img src="/img/carDrifting2.gif" alt="car spining" height="70%" width="70%" class="img-thumbnail">
+            </div>
+        </div>
+        <div class="row row-content">
+            <div class="col-12">
+            </div>
+        </div>
     </div>
 
     <footer class="footer">
@@ -104,6 +125,18 @@
     <script src="node_modules/jquery/dist/jquery.slim.min.js"></script>
     <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="js/searchEvent.js"></script>
+    <script>
+        document.getElementById("search").addEventListener("keyup", function(event) {
+            event.preventDefault();
+            console.log("Hello from listener");
+            console.log(event.keyCode);
+            if (event.keyCode === 73) {
+                console.log("Enter-click");
+                document.getElementById("searchBtn").click();
+            }
+        });
+    </script>
 </body>
 
 </html>
